--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "autoprefixer": "^10.2.5",
+    "framer-motion": "^3.10.0",
     "next": "10.0.8",
+    "postcss": "^8.2.8",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.2.3"
   }
 }
