--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "dependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
-    "autoprefixer": "^10.2.5",
     "framer-motion": "^3.10.0",
     "next": "10.0.8",
-    "postcss": "^8.2.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.3",
+    "react-query": "^3.12.1",
     "typescript": "^4.2.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.8",
+    "tailwindcss": "^2.0.3"
   }
 }
